# claude-cost

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  METRICS_VERIFICATION.md  PUBLISH_COMMANDS.sh  README.md  RELEASE_CHECKLIST.md  SECURITY.md  claude-cost  claude_comprehensive_metrics.py  pyproject.toml  requirements.txt  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml  test-pr.yml
src/claude_cost/: __init__.py  advanced_predictions.py  cli.py  core.py  metrics.py  models.py  predictions.py
