[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "claude-cost"
version = "1.0.0"
authors = [
    {name = "Hassan", email = "noreply@claude-cost.dev"},
]
description = "Command-line tool for AI usage analysis, cost optimization, and usage limit predictions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Topic :: Office/Business :: Financial",
    "Environment :: Console",
    "Natural Language :: English",
]
keywords = [
    "claude", 
    "ai", 
    "cost", 
    "analysis", 
    "optimization", 
    "usage", 
    "metrics", 
    "privacy", 
    "cli", 
    "anthropic",
    "tokens",
    "cache",
    "prediction"
]
dependencies = []

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
    "pandas>=1.3.0", 
    "seaborn>=0.11.0",
    "numpy>=1.21.0",
    "rich>=13.0.0"
]

[project.urls]
Homepage = "https://github.com/hassanazam/claude-cost"
Documentation = "https://github.com/hassanazam/claude-cost#readme"
Repository = "https://github.com/hassanazam/claude-cost.git"
"Bug Tracker" = "https://github.com/hassanazam/claude-cost/issues"
"Source Code" = "https://github.com/hassanazam/claude-cost"
"Download" = "https://pypi.org/project/claude-cost/"

[project.scripts]
claude-cost = "claude_cost.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_cost"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md", 
    "/LICENSE",
]